feat: 백업 목록 조회 기능(searchBackups) 구현 #15
필터 조건(작업자, 상태, 시작/종료 시간), 정렬 필드, 커서 기반 페이지네이션을 적용한 백업 이력 조회 기능을 구현했습니다.