@@ -1,10 +1,14 @@
 package com.hrbank.service.basic;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.hrbank.dto.backup.BackupDto;
+import com.hrbank.dto.backup.CursorPageResponseBackupDto;
 import com.hrbank.entity.Backup;
 import com.hrbank.entity.BinaryContent;
 import com.hrbank.entity.Employee;
 import com.hrbank.enums.BackupStatus;
+import com.hrbank.enums.EmployeeCsvHeader;
 import com.hrbank.mapper.BackupMapper;
 import com.hrbank.repository.BackupRepository;
 import com.hrbank.repository.BinaryContentRepository;
@@ -22,8 +26,10 @@ import java.io.StringWriter;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.time.Instant;
-import java.time.LocalDateTime;
+import java.util.Base64;
+import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -31,6 +37,7 @@ import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVPrinter;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 
 @Service
 @Transactional
@@ -41,8 +48,69 @@ public class BasicBackupService implements BackupService {
   private final BackupRepository backupRepository;
   private final BackupMapper backupMapper;
   private final EmployeeRepository employeeRepository;
-  private final EmployeeChangeLogRepository employeeChangeLogRepository
+  private final EmployeeChangeLogRepository employeeChangeLogRepository;
   private final BinaryContentRepository binaryContentRepository;
+
+  @Override
+  public CursorPageResponseBackupDto searchBackups(
+      String worker, BackupStatus status, Instant from, Instant to,
+      Long id, String cursor, Integer size, String sortField, String sortDirection) {
+
+    // 필터링
+    List<Backup> filtered = backupRepository.findAll().stream()
+        .filter(backup -> worker == null || backup.getWorker().equals(worker))
+        .filter(backup -> status == null || backup.getStatus() == status)
+        .filter(backup -> from == null || backup.getStartedAt().isAfter(from))
+        .filter(backup -> to == null || backup.getStartedAt().isBefore(to))
+        .toList();
+
+    // 정렬 기준 설정
+    Comparator<Backup> comparator = "endedAt".equalsIgnoreCase(sortField)
+        ? Comparator.comparing(Backup::getEndedAt)
+        : Comparator.comparing(Backup::getStartedAt);
+
+    if ("DESC".equalsIgnoreCase(sortDirection)) {
+      comparator = comparator.reversed();
+    }
+
+    filtered.sort(comparator);
+
+    // 커서 디코딩 및 시작 인덱스 계산
+    int finalSize = (size == null || size <= 0) ? 10 : size;
+    int startIndex = 0;
+    Long cursorId = null;
+
+    if (cursor != null && !cursor.isBlank()) {
+      cursorId = decodeCursor(cursor);
+
+      for (int i = 0; i < filtered.size(); i++) {
+        if (Objects.equals(filtered.get(i).getId(), cursorId)) {
+          startIndex = i + 1;
+          break;
+        }
+      }
+    }
+
+    // 페이지 처리
+    int endIndex = Math.min(startIndex + finalSize, filtered.size());
+    List<BackupDto> page = filtered.subList(startIndex, endIndex).stream()
+        .map(backupMapper::toDto)
+        .toList();
+
+    boolean hasNext = endIndex < filtered.size();
+    Long nextIdAfter = hasNext ? filtered.get(endIndex - 1).getId() : null;
+    String nextCursor = hasNext ? encodeCursor(nextIdAfter) : null;
+
+    return new CursorPageResponseBackupDto(
+        page,
+        nextCursor,
+        nextIdAfter,
+        finalSize,
+        filtered.size(),
+        hasNext
+    );
+  }
+
 
   @Override
   public void runBackup(String requesterIp) {
@@ -63,14 +131,15 @@ public class BasicBackupService implements BackupService {
 
     try {
       // 백업 파일 생성
-      // 파일 생성 추후 구현
-      Long fileId = generateBackupFile(inProgress.id());
+      Long fileId = generateBackupFile();
 
       // 성공 처리
       markBackupCompleted(inProgress.id(), fileId);
+
+
     } catch (Exception e) {
-      // 에러 로그 파일 저장 (추후 구현)
-      Long logFileId = saveErrorLogFile(e); // 가정: 오류 로그 저장 메서드
+      // 로그 파일 생성
+      Long logFileId = saveErrorLogFile(e);
 
       // 실패 처리
       markBackupFailed(inProgress.id(), logFileId);
@@ -126,7 +195,7 @@ public class BasicBackupService implements BackupService {
     backup.failBackup(logFile);
   }
 
-  private Long generateBackupFile(Long backupId) {
+  private Long generateBackupFile() {
     try {
       File file = createEmployeeCsv();
       return storeAsBinary(file, "text/csv");
@@ -180,7 +249,7 @@ public class BasicBackupService implements BackupService {
     String logContent = sw.toString();
 
     File logFile = File.createTempFile("backup-error-", ".log");
-    Files.write(logFile.toPath(), logContent.getBytes(StandardCharsets.UTF_8));
+    Files.writeString(logFile.toPath(), logContent, StandardCharsets.UTF_8);
     return logFile;
   }
 
@@ -189,6 +258,27 @@ public class BasicBackupService implements BackupService {
     byte[] data = Files.readAllBytes(file.toPath());
     BinaryContent binaryContent = new BinaryContent(file.getName(), contentType, (long) data.length);
     return binaryContentRepository.save(binaryContent).getId();
+  }
+
+  private Long decodeCursor(String cursor) {
+    try {
+      byte[] decodedBytes = Base64.getDecoder().decode(cursor);
+      String json = new String(decodedBytes, StandardCharsets.UTF_8);
+
+      // JSON에서 "id" 필드 추출
+      ObjectMapper objectMapper = new ObjectMapper();
+      JsonNode node = objectMapper.readTree(json);
+      return node.has("id") ? node.get("id").asLong() : null;
+    } catch (Exception e) {
+      log.warn("Invalid cursor: {}", cursor);
+      throw new IllegalArgumentException("Invalid cursor format: " + cursor, e);
+    }
+  }
+
+  private String encodeCursor(Long id) {
+    if (id == null) return null;
+    String json = "{\"id\":" + id + "}";
+    return Base64.getEncoder().encodeToString(json.getBytes(StandardCharsets.UTF_8));
   }
 }
 
